Started team-plan v1.0, finished project-description v1.0, small code corrections and more code data instances

--- a/Reports/Project-Description/v1.0/Files/Project-description-v1.0.tex
+++ b/Reports/Project-Description/v1.0/Files/Project-description-v1.0.tex
@@ -44,7 +44,7 @@
 Το προς δημιουργία project λογισμικού αποτελεί μια εφαρμογή Peer-2-Peer ενοικίασης βιβλίων. Δηλαδή η εφαρμογή αυτή επιτρέπει χρήστες να νοικιάζουν βιβλία ο ένας από τον άλλο για χρηματική ανταμοιβή, με ενσωματωμένη ασφάλεια έναντι κλοπών. Ο χρήστης σε πρώτο βήμα θα μπορεί να δημιουργεί προσωπικό λογαριασμό στην εφαρμογή, εισάγοντας το προσωπικό του email, ένα username και ένα password. Μετά τη δημιουργία του λογαριασμού του ο χρήστης θα μπορεί να εισέρχεται στην εφαρμογή εισάγοντας τα στοιχεία του. Στην εφαρμογή του δίνονται οι εξής δυνατότητες:
 
 \subsection{Σύστημα ενοικιάσεων βιβλίων}
-Θα μπορεί να νοικιάσει ένα βιβλίο από άλλους χρήστες της εφαρμογής. Κατά τη λειτουργία αυτή θα του εμφανίζεται μια λίστα από διαθέσιμα βιβλία προς ενοικίαση από άλλους χρήστες της εφαρμογής. Θα υπάρχει δυνατότητα για συναλλαγή πρόσωπο με πρόσωπο, αν οι δύο χρήστες μένουν κοντά και μέσω ταχυδρομικής αποστολής, ασχέτως αν οι χρήστες μένουν κοντά ή μακριά.
+Θα μπορεί να νοικιάσει ένα βιβλίο από άλλους χρήστες της εφαρμογής. Κατά τη λειτουργία αυτή θα του εμφανίζεται μια λίστα από διαθέσιμα βιβλία προς ενοικίαση από άλλους χρήστες της εφαρμογής. Θα υπάρχει δυνατότητα για συναλλαγή πρόσωπο με πρόσωπο, για τη περίπτωση που οι δύο χρήστες μένουν κοντά και μέσω ταχυδρομικής αποστολής, ασχέτως αν οι χρήστες μένουν κοντά ή μακριά.
 
 Έτσι αφού ο χρήστης κάνει αναζήτηση στη πλατφόρμα και βρει το βιβλίο που θέλει, θα του εμφανίζεται η λίστα των χρηστών που προσφέρουν το βιβλίο αυτό για ενοικίαση. Σε αυτή τη λίστα βλέπει ο χρήστης τους τρόπους συναλλαγής που δέχεται κάθε χρήστης (ταχυδρομικώς ή πρόσωπο με πρόσωπο), την τιμή που ζητάει ο καθένας και το προσωπικό του "σκορ" που προκύπτει από reviews των άλλων χρηστών (θα εξηγηθεί περισσότερο παρακάτω). Αφού επιλέξει έναν μπορεί να του κάνει "Αίτηση ενοικίασης". Έπειτα της αίτησης, ενημερώνεται ο χρήστης - ιδιοκτήτης του βιβλίου και έχει την επιλογή να δεχτεί ή να απορρίψει την αίτηση αυτή.
 
@@ -53,7 +53,7 @@
 
 Επίσης ο κάθε χρήστης θα μπορεί να αναρτήσει τα βιβλία του στη πλατφόρμα, προσφέροντας τη δυνατότητα στους άλλου χρήστες να νοικιάζουν τα βιβλία του, με χρηματική ανταμοιβή που ορίζει ο ίδιος. Ο χρήστης θα μπορεί επίσης να επεξεργάζεται τη λίστα των βιβλίων που του ανήκουν και προσφέρει για ενοικίαση, προσθέτοντας και αφαιρώντας τυχόν βιβλία.
 
-Ακόμα θα υπάρχει δυνατότητα για τους χρήστες να προβάλλουν το ιστορικό των συναλλαγών τους, μαζί με την κατάσταση των εκκρεμών συναλλαγών και αιτήσεων.
+Ακόμα θα υπάρχει δυνατότητα για τους χρήστες να προβάλλουν το ιστορικό των συναλλαγών τους, μαζί με την κατάσταση των εκκρεμών συναλλαγών τους.
 
 Τέλος οι χρήστες θα μπορούν επίσης έπειτα από μια συναλλαγή να κάνουν reviews ο ένας στον άλλο με τη μορφή 1 έως 5 αστεριών, με προαιρετική προσθήκη σχολίου. Έτσι το συνολικό "σκορ" του κάθε χρήστη εμφανίζεται δίπλα στο όνομά του στη λίστα αναζήτησης βιβλίων και στο προφίλ του φαίνεται το σκορ μαζί με τα σχόλια στους υπόλοιπους χρήστες.
 
@@ -62,41 +62,50 @@
 
 Επίσης θα υπάρχει δυνατότητα για προσθήκη των άλλων χρηστών στη λίστα "Αγαπημένων", όπου τα βιβλία που τους ανήκουν και προσφέρονται για ενοικίαση εμφανίζονται με προτεραιότητα στη λίστα των διαθέσιμων βιβλίων κατά την αναζήτηση.
 
-Επίσης το σύστημα των αγαπημένων θα συνδέεται με το σύστημα των ενημερώσεων, με το οποίο ο χρήστης ενημερώνεται από το σύστημα όταν ένας χρήστης στη λίστα αγαπημένων του προσθέτει νέο βιβλίο προς ενοικίαση στο σύστημα.
+Επίσης το σύστημα των αγαπημένων θα συνδέεται με το σύστημα των ενημερώσεων, με το οποίο ο χρήστης ενημερώνεται από το σύστημα όταν ένας χρήστης στη λίστα αγαπημένων του προσθέτει νέο βιβλίο προς ενοικίαση στο σύστημα ή κάνει μια νέα αίτηση βιβλίου (που εξηγείται στο κεφάλαιο \ref{Αιτήσεις}).
 
-\subsection{Σύστημα αιτήσεων βιβλίων που δεν προσφέρονται ήδη στην πλατφόρμα}
-Θα υπάρχει επίσης λειτουργικότητα για τους χρήστες να δημιουργούν και να προβάλλουν "αιτήματα" για βιβλία που δεν υπάρχουν διαθέσιμα προς ενοικίαση στην πλατφόρμα, με προσφορά επιπλέον ανταμοιβής σε όποιον ιδιοκτήτη του βιβλίου αυτού το προσφέρει στον χρήστη που το ζητάει. Με αυτόν τον τρόπο διευκολύνεται η εύρεση βιβλίων που δεν είναι ήδη διαθέσιμα στη πλατφόρμα.
+\subsection{Σύστημα αιτήσεων βιβλίων που δεν προσφέρονται ήδη στην πλατφόρμα ή είναι πολύ ακριβά}
+\label{Αιτήσεις}
 
-Επίσης θα μπορεί ο χρήστης να αναζητεί, να προβάλλει και να πληρεί αιτήσεις άλλων χρηστών, εφόσον έχει το βιβλίο που ζητείται, και έτσι να κάνει αίτηση εκπλήρωσης αίτησης στον χρήστη που την έφτιαξε και να αρχικοποιηθεί συναλλαγή μαζί του.
+Θα υπάρχει επίσης λειτουργικότητα για τους χρήστες να δημιουργούν και να προβάλλουν "αιτήματα" για βιβλία που δεν υπάρχουν διαθέσιμα προς ενοικίαση στην πλατφόρμα, συμπληρώνοντας τη τιμή ανά μέρα που προτίθενται να πληρώσουν σε κάποιον ιδιοκτήτη του βιβλίου που επιλέξει να δεχτεί το "αίτημα" και να νοικιάσει το βιβλίο στο χρήστη που το ζητάει (συνήθως η τιμή είναι μεγαλύτερη από τη συνηθισμένη για επιπλέον κίνητρο). Με αυτόν τον τρόπο διευκολύνεται η εύρεση βιβλίων που δεν είναι ήδη διαθέσιμα στη πλατφόρμα.
+
+Επίσης κάποιος χρήστης που δεν είναι ικανοποιημένος από τις διαθέσιμες τιμές για ένα βιβλίο που ψάχνει μπορεί να κάνει αίτηση με χαμηλότερη ημερήσια τιμή ανταμοιβής από τις ήδη διαθέσιμες, ελπίζοντας κάποιος από τους ενοικιαστές να δεχτεί την αίτησή του.
+
+Ακόμα θα μπορεί ο χρήστης να αναζητεί, να προβάλλει και να πληρεί αιτήσεις άλλων χρηστών, εφόσον έχει το βιβλίο που ζητείται, και έτσι να κάνει "προσφορά εκπλήρωσης αίτησης" στον χρήστη που την έφτιαξε και να αρχικοποιηθεί συναλλαγή μαζί του.
 
 \subsection{Σύστημα διαχείρισης λογαριασμών}
-Ο χρήστης θα μπορεί να προβάλλει και να αλλάζει τα στοιχεία του, δηλαδή το username, το email το, σύντομο description, τη πόλη κατοικίας, την  εικόνα χρήστη και τον κωδικό πρόσβασής του. Θα μπορεί επίσης να προσθέσει και να αφαιρέσει λεφτά από τον λογαριασμό του. 
+Ο χρήστης θα μπορεί να προβάλλει και να αλλάζει τα στοιχεία του, δηλαδή το username, το email το, σύντομο description, τη πόλη κατοικίας, την εικόνα χρήστη και τον κωδικό πρόσβασής του. Θα μπορεί επίσης να προσθέσει και να αφαιρέσει λεφτά από τον λογαριασμό του. 
 
 \subsection{Σύστημα προστασίας χρηστών από κλοπές και φθορές}
 Για την προστασία των ιδιοκτητών από κλοπές, θα γίνεται αυτόματη μεταφορά των χρημάτων μεταξύ χρηστών κατά τη διάρκεια μιας ενοικίαση. 
 
 Επίσης για να επιτευχθεί μια ενοικίαση δεσμεύεται ένα "ποσό ασφαλείας" από τον ενοικιαστή, με σκοπό την προστασία του ιδιοκτήτη από κλοπή ή φθορά του βιβλίου. Στην περίπτωση που η συναλλαγή ολοκληρωθεί χωρίς κανένα θέμα το ποσό αυτό ασφαλείας θα επιστρέφεται στον ενοικιαστή αυτομάτως.
 
-Στην περίπτωση όμως διαμάχης μεταξύ ενοικιαστή και ιδιόκτητη θα υπάρχει δυνατότητα επικοινωνίας με υποστήριξη πελατών με σκοπό την επίλυση των διαφωνιών όπου είναι εφικτό. Παραδείγματα διαμαχών μπορεί να είναι η κλοπή ή φθορά του βιβλίου, όπου ο ιδιοκτήτης αποζημιώνεται μέσω του "ποσού ασφαλείας" ή θα μπορούσε να είναι η αποστολή ταχυδρομικώς του λάθους βιβλίου, όπου ο ενοικιαστής δεν χρειάζεται να πληρώσει τίποτα, και του αποδεσμεύεται αμέσως το "ποσό ασφαλείας". Και στις δύο περιπτώσεις το άτομο με κακή τιμωρείται από την πλατφόρμα με περιορισμούς στις ενοικιάσεις, και από τους ίδιους τους χρήστες μέσω των κακών σκορ.
+Στην περίπτωση όμως διαμάχης μεταξύ ενοικιαστή και ιδιόκτητη θα υπάρχει δυνατότητα επικοινωνίας με υποστήριξη πελατών με σκοπό την επίλυση των διαφωνιών όπου είναι εφικτό. Παραδείγματα διαμαχών μπορεί να είναι η κλοπή ή φθορά του βιβλίου, όπου ο ιδιοκτήτης αποζημιώνεται μέσω του "ποσού ασφαλείας" ή θα μπορούσε να είναι η αποστολή ταχυδρομικώς του λάθους βιβλίου, όπου ο ενοικιαστής δεν χρειάζεται να πληρώσει τίποτα, και του αποδεσμεύεται αμέσως το "ποσό ασφαλείας". Και στις δύο περιπτώσεις το άτομο με κακή συμπεριφορά τιμωρείται από την πλατφόρμα με περιορισμούς στις μελλοντικές ενοικιάσεις τους, και από τους ίδιους τους χρήστες μέσω των κακών σκορ που θα λάβουν για τις συναλλαγές τους.
 
 Η υποστήριξη πελατών σημειώνουμε λειτουργεί με βάση προκαθορισμένης πολιτικής προστασίας πελατών. Έχει σκοπό να τιμωρήσει κακόβουλες συμπεριφορές και έχει τη δυνατότητα να αποδεσμεύσει το ποσό προκαταβολής και να το χρησιμοποιήσει για να αποζημιωθούν οι χρήστες, μόνο όταν το ορίζει η πολιτική.
 
-\section{Mock-up Οθόνες}
+\section{Mock-up Οθόνες έκδοσης v0.2}
+\label{Mock-up Screens}
 
-\textbf{Σημέιωση:} Οι οθόνες στο κεφάλαιο αυτό είναι ενδεικτικές και δεν θα αποτελούν αναγκαστικά την ακριβή δομή του τελικού project. Λειτουργούν παραπάνω για ένδειξη του περιεχομένου της τελικής οθόνης και όροι όπως "στο κάτω μέρος της οθόνης" αναφέρονται μόνο στη δομή του σχήματος που δίνεται και όχι αναγκαστικά του τελικού project.
+\textbf{Σημείωση:} Οι οθόνες στο κεφάλαιο αυτό ήταν ενδεικτικές και δεν θα αποτελούν αναγκαστικά την ακριβή δομή του τελικού project. Λειτουργούσαν παραπάνω για ένδειξη του περιεχομένου της τελικής οθόνης και όροι όπως "στο κάτω μέρος της οθόνης" αναφέρονται μόνο στη δομή του σχήματος που δίνεται και όχι αναγκαστικά του τελικού project.
+
+Επίσης σημειώνουμε ότι ορισμένες οθόνες και λειτουργίες τελικά άλλαξαν από τα mock-up screens αυτού του κεφαλαίου μέχρι τη τελική έκδοση, screenshots των οθονών της οποίας παρουσιάζονται στο κεφάλαιο \ref{Code Screens} μαζί με αναλυτική περιγραφή των διαφορών.
+
+Επίσης αναφέρουμε ότι δεν παρουσιάζουμε τις οθόνες της έκδοσης v0.1, επειδή νιώθουμε ότι είναι ελλιπής ως προς την ένδειξη της λειτουργικότητας που τελικά καταλήξαμε να υλοποιήσουμε, λόγω των μεγάλων διαφορών στη περιγραφή από την έκδοση v0.1 σε v0.2.
 
 \subsection{Search}
 
-Για την οθόνη της αναζήτησης έχουμε ορίσει τρεις περιπτώσεις (με βάση τα φίλτρα που εισάγει ο χρήστης), οι οποίες αποτελούν τα σχήματα \ref{Οθόνη "Search Book" λειτουργικότητας},
+Για την οθόνη της αναζήτησης έχουμε ορίσει τρεις περιπτώσεις (με βάση τα φίλτρα που εισάγει ο χρήστης), οι οποίες αποτελούν τα σχήματα \ref{Mock-up Οθόνη "Search Book" λειτουργικότητας},
 
 \subsubsection{Search Book}
 
-Στο Σχήμα \ref{Οθόνη "Search Book" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της αναζήτησης βιβλίων και της δημιουργίας αίτησης ενοικίασης.
+Στο Σχήμα \ref{Mock-up Οθόνη "Search Book" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της αναζήτησης βιβλίων και της δημιουργίας αίτησης ενοικίασης.
 
 \begin{figure}[H]
 	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/Search Book.png}}
-	\caption{Οθόνη "Search Book" λειτουργικότητας}
-	\label{Οθόνη "Search Book" λειτουργικότητας}
+	\caption{Mock-up Οθόνη "Search Book" λειτουργικότητας}
+	\label{Mock-up Οθόνη "Search Book" λειτουργικότητας}
 \end{figure}
 
 Ο χρήστης δίπλα σε κάθε βιβλίο έχει τη δυνατότητα να πατήσει το drop down μενού, οπότε μετά του εμφανίζονται οι ιδιοκτήτες που έχουν διαθέσιμο το βιβλίο προς ενοικίαση.
@@ -105,12 +114,12 @@
 
 \subsubsection{Search User}
 
-Στο Σχήμα \ref{Οθόνη "Search User" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της αναζήτησης χρηστών.
+Στο Σχήμα \ref{Mock-up Οθόνη "Search User" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της αναζήτησης χρηστών.
 
 \begin{figure}[H]
 	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/Search User.png}}
-	\caption{Οθόνη "Search User" λειτουργικότητας}
-	\label{Οθόνη "Search User" λειτουργικότητας}
+	\caption{Mock-up Οθόνη "Search User" λειτουργικότητας}
+	\label{Mock-up Οθόνη "Search User" λειτουργικότητας}
 \end{figure}
 
 Ο χρήστης έχει επίσης έχει τη δυνατότητα να τον προσθέσει στη λίστα των αγαπημένων του, καθώς και να προβάλλει τα διαθέσιμα βιβλία που έχει προς ενοικίαση, μέσω του drop down μενού. 
@@ -119,119 +128,261 @@
 
 \subsubsection{Search Requests}
 
-Στο Σχήμα \ref{Οθόνη "Search Requests" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της αναζήτησης αιτήσεων που έχουν κάνει άλλοι χρήστες.
+Στο Σχήμα \ref{Mock-up Οθόνη "Search Requests" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της αναζήτησης αιτήσεων που έχουν κάνει άλλοι χρήστες.
 
 \begin{figure}[H]
 	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/Search Request.png}}
-	\caption{Οθόνη "Search Requests" λειτουργικότητας}
-	\label{Οθόνη "Search Requests" λειτουργικότητας}
+	\caption{Mock-up Οθόνη "Search Requests" λειτουργικότητας}
+	\label{Mock-up Οθόνη "Search Requests" λειτουργικότητας}
 \end{figure}
 
 Ο χρήστης στην οθόνη αυτή μπορεί να προβάλλει και να αναζητεί τις αιτήσεις άλλων χρηστών και έχει τη δυνατότητα να δεχτεί τις αιτήσεις αυτές αν έχει το βιβλίο που ζητείται. Μέσω του κουμπιού "Accept" δημιουργείται μια νέα συναλλαγή με τον χρήστη που αιτεί το βιβλίο.
 
 \subsection{Dashboard}
 
-Στο Σχήμα \ref{Οθόνη "Dashboard" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της οθόνης "Dashboard" που δείχνει τις τρέχουσες συναλλαγές με δυνατότητα χειρισμού του και ανανέωσης της κατάστασης στις οποίες βρίσκονται.
+Στο Σχήμα \ref{Mock-up Οθόνη "Dashboard" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της οθόνης "Dashboard" που δείχνει τις τρέχουσες συναλλαγές με δυνατότητα χειρισμού του και ανανέωσης της κατάστασης στις οποίες βρίσκονται.
 
 \begin{figure}[H]
 	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/Dashboard.png}}
-	\caption{Οθόνη "Dashboard" λειτουργικότητας}
-	\label{Οθόνη "Dashboard" λειτουργικότητας}
+	\caption{Mock-up Οθόνη "Dashboard" λειτουργικότητας}
+	\label{Mock-up Οθόνη "Dashboard" λειτουργικότητας}
 \end{figure}
 
 Παρατηρούμε ότι στους πίνακες έχουμε το πεδίο "Situation" στο οποίο αναφέρεται η κατάσταση στην οποία βρίσκεται η συναλλαγή (πχ αναμονή για αποδοχή από τον ιδιοκτήτη, αναμονή για επιστροφή κτλ).
 
 Επίσης με το πεδίο "Change Situation" έχουμε παραθέσει τα κουμπιά με τα οποία ο χρήστης αλλάζει τις καταστάσεις (πχ αποδοχή αιτήματος, δήλωση επιστροφής βιβλίου κτλ).
 
-\subsection{My Listings}
+\subsection{My Book Offers}
 
-Στο Σχήμα \ref{Οθόνη "My Listings" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της προβολής των βιβλίων που προσφέρει ο χρήστης σε άλλους να νοικιάσουν, μαζί με δυνατότητα προσθήκης και αφαίρεσης άλλων βιβλίων.
+Στο Σχήμα \ref{Mock-up Οθόνη "My Book Offers" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της προβολής των βιβλίων που προσφέρει ο χρήστης σε άλλους να νοικιάσουν, μαζί με δυνατότητα προσθήκης και αφαίρεσης άλλων βιβλίων.
 
 \begin{figure}[H]
-	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/My Listings.png}}
-	\caption{Οθόνη "My Listings" λειτουργικότητας}
-	\label{Οθόνη "My Listings" λειτουργικότητας}
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/My Book Offers.png}}
+	\caption{Mock-up Οθόνη "My Book Offers" λειτουργικότητας}
+	\label{Mock-up Οθόνη "My Book Offers" λειτουργικότητας}
 \end{figure}
 
-Πατώντας το κουμπί "Edit" ή το κουμπί "Add Listing" εμφανίζεται pop up οθόνη στην οποία ο χρήστης αλλάζει ή προσθέτει αντίστοιχα τα στοιχεία του βιβλίου, την τιμή και το τρόπο συναλλαγής. Ένα mock up screen της οθόνης αυτής φαίνεται στο Σχήμα \ref{Οθόνη "Add Book Details" λειτουργικότητας}.
+Πατώντας το κουμπί "Edit" ή το κουμπί "Add Listing" εμφανίζεται pop up οθόνη στην οποία ο χρήστης αλλάζει ή προσθέτει αντίστοιχα τα στοιχεία του βιβλίου, την τιμή και το τρόπο συναλλαγής. Ένα mock up screen της οθόνης αυτής φαίνεται στο Σχήμα \ref{Mock-up Οθόνη "Add Book Details" λειτουργικότητας}.
 
 \begin{figure}[H]
 	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/Add Book Details Popup.png}}
-	\caption{Οθόνη "Add Book Details" λειτουργικότητας}
-	\label{Οθόνη "Add Book Details" λειτουργικότητας}
+	\caption{Mock-up Οθόνη "Add Book Details" λειτουργικότητας}
+	\label{Mock-up Οθόνη "Add Book Details" λειτουργικότητας}
 \end{figure}
 
 
 \subsection{My Requests}
 
-Στο Σχήμα \ref{Οθόνη "My Requests" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της προβολή των αιτήσεων που έχει κάνει ο χρήστης, μαζί με δυνατότητα προσθήκης και αφαίρεσής τους.
+Στο Σχήμα \ref{Mock-up Οθόνη "My Requests" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της προβολή των αιτήσεων που έχει κάνει ο χρήστης, μαζί με δυνατότητα προσθήκης και αφαίρεσής τους.
 
 \begin{figure}[H]
 	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/My Requests.png}}
-	\caption{Οθόνη "My Requests" λειτουργικότητας}
-	\label{Οθόνη "My Requests" λειτουργικότητας}
+	\caption{Mock-up Οθόνη "My Requests" λειτουργικότητας}
+	\label{Mock-up Οθόνη "My Requests" λειτουργικότητας}
 \end{figure}
 
-Πατώντας το κουμπί "Edit" ή το κουμπί "Add Request" εμφανίζεται pop up οθόνη στην οποία ο χρήστης αλλάζει ή προσθέτει αντίστοιχα τα στοιχεία της αίτησης, η οποία θα μοιάζει πάλι σαν την οθόνη του Σχήματος \ref{Οθόνη "Add Book Details" λειτουργικότητας}.
+Πατώντας το κουμπί "Edit" ή το κουμπί "Add Request" εμφανίζεται pop up οθόνη στην οποία ο χρήστης αλλάζει ή προσθέτει αντίστοιχα τα στοιχεία της αίτησης, η οποία θα μοιάζει πάλι σαν την οθόνη του Σχήματος \ref{Mock-up Οθόνη "Add Book Details" λειτουργικότητας}.
 
 
 \subsection{Transaction History}
 
-Στο Σχήμα \ref{Οθόνη "Transaction History" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της προβολής των τελειωμένων συναλλαγών, μαζί με τη δυνατότητα προβολής στατιστικών και την δυνατότητα επιλογής φίλτρων για την αναζήτηση στο ιστορικό.
+Στο Σχήμα \ref{Mock-up Οθόνη "Transaction History" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της προβολής των τελειωμένων συναλλαγών, μαζί με τη δυνατότητα προβολής στατιστικών και την δυνατότητα επιλογής φίλτρων για την αναζήτηση στο ιστορικό.
 
 \begin{figure}[H]
 	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/Transaction History.png}}
-	\caption{Οθόνη "Transaction History" λειτουργικότητας}
-	\label{Οθόνη "Transaction History" λειτουργικότητας}
+	\caption{Mock-up Οθόνη "Transaction History" λειτουργικότητας}
+	\label{Mock-up Οθόνη "Transaction History" λειτουργικότητας}
 \end{figure}
 
 Στην οθόνη αυτή υπάρχει επίσης η δυνατότητα για τον χρήστη να προσθέσει τον άλλο χρήστη με τον οποίο έκανε τη συναλλαγή στη λίστα αγαπημένων του, και την καταχώρηση αξιολόγησης για τον χρήστη αυτόν, με τη μορφή ενός έως πέντε "αστεράκια" και προαιρετική εισαγωγή σχολίου.
 
-Στο Σχήμα \ref{Οθόνη "Star Rating" λειτουργικότητας} φαίνεται η δυνατότητα αξιολόγησης με τα "αστεράκια" και στο Σχήμα \ref{Οθόνη "Comment Rating" λειτουργικότητας} φαίνεται η δυνατότητα συγγραφής του προαιρετικού σχολίου.
+Στο Σχήμα \ref{Mock-up Οθόνη "Star Review" λειτουργικότητας} φαίνεται η δυνατότητα αξιολόγησης με τα "αστεράκια" και στο Σχήμα \ref{Mock-up Οθόνη "Star and Comment Review" λειτουργικότητας} φαίνεται η δυνατότητα συγγραφής του προαιρετικού σχολίου.
 
 \begin{figure}[H]
-    \makebox[\textwidth]{\fbox{\includegraphics[width=\textwidth]{Mockup Screens/Star Rating.png}}}
-	\caption{Οθόνη "Star Rating" λειτουργικότητας}
-	\label{Οθόνη "Star Rating" λειτουργικότητας}
+    \makebox[\textwidth]{\fbox{\includegraphics[width=\textwidth]{Mockup Screens/Star Review.png}}}
+	\caption{Mock-up Οθόνη "Star Review" λειτουργικότητας}
+	\label{Mock-up Οθόνη "Star Review" λειτουργικότητας}
 \end{figure}
 
 \begin{figure}[H]
-    \makebox[\textwidth]{\fbox{\includegraphics[width=\textwidth]{Mockup Screens/Comment Rating.png}}}
-	\caption{Οθόνη "Comment Rating" λειτουργικότητας}
-	\label{Οθόνη "Comment Rating" λειτουργικότητας}
+    \makebox[\textwidth]{\fbox{\includegraphics[width=\textwidth]{Mockup Screens/Star and Comment Review.png}}}
+	\caption{Mock-up Οθόνη "Star and Comment Review" λειτουργικότητας}
+	\label{Mock-up Οθόνη "Star and Comment Review" λειτουργικότητας}
 \end{figure}
 
-\subsection{Notifications:}
+\subsection{Notifications}
 
-Στο Σχήμα \ref{Οθόνη "Notifications" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της προβολής ειδοποιήσεων, που δημιουργούνται αυτόματα όταν ένας "αγαπημένος" χρήστης του χρήστη προσθέτει ένα νέο βιβλίο προς ενοικίαση από άλλους ή προσθέτει μια νέα αίτηση.
+Στο Σχήμα \ref{Mock-up Οθόνη "Notifications" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της προβολής ειδοποιήσεων, που δημιουργούνται αυτόματα όταν ένας "αγαπημένος" χρήστης του χρήστη προσθέτει ένα νέο βιβλίο προς ενοικίαση από άλλους ή προσθέτει μια νέα αίτηση.
 
 \begin{figure}[H]
 	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/Notifications.png}}
-	\caption{Οθόνη "Notifications" λειτουργικότητας}
-	\label{Οθόνη "Notifications" λειτουργικότητας}
+	\caption{Mock-up Οθόνη "Notifications" λειτουργικότητας}
+	\label{Mock-up Οθόνη "Notifications" λειτουργικότητας}
 \end{figure}
 
 Στην οθόνη αυτή υπάρχει ένα κουμπί αφαίρεσης του χρήστη από τη λίστα αγαπημένων, οπότε μετά από αυτό δεν θα εμφανίζονται πλέον ειδοποιήσεις σχετικές με αυτόν τον χρήστη.
 
 \subsection{Profile και Balance}
 
-Στο Σχήμα \ref{Οθόνη "My Profile" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της προβολής και αλλαγής των στοιχείων του λογαριασμού του συνδεδεμένου χρήστη.
+Στο Σχήμα \ref{Mock-up Οθόνη "My Profile" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της προβολής και αλλαγής των στοιχείων του λογαριασμού του συνδεδεμένου χρήστη.
 
 \begin{figure}[H]
 	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/My Profile.png}}
-	\caption{Οθόνη "My Profile" λειτουργικότητας}
-	\label{Οθόνη "My Profile" λειτουργικότητας}
+	\caption{Mock-up Οθόνη "My Profile" λειτουργικότητας}
+	\label{Mock-up Οθόνη "My Profile" λειτουργικότητας}
 \end{figure}
 
 Στην οθόνη αυτή υπάρχουν κουμπιά edit δίπλα από κάθε στοιχείο, που θα επιτρέπουν στον χρήστη να κάνει αλλαγές. Επίσης θα μπορεί να αλλάξει τον κωδικό του, όπου θα πρέπει να εισάγει πρώτα τον παλιό του κωδικό, και μετά δύο φορές τον νέο πριν επιβεβαιώσει την αλλαγή. 
 
-Με το κουμπί "Manage" δίπλα στο "Balance" εμφανίζεται επίσης ένα pop up όπου ο χρήστης έχει την επιλογή να προσθέσει ή να αφαιρέσει λεφτά στον/από τον λογαριασμό του. Η οθόνη αυτή φαίνεται στο σχήμα \ref{Οθόνη "Balance" λειτουργικότητας}.
+Με το κουμπί "Manage" δίπλα στο "Balance" εμφανίζεται επίσης ένα pop up όπου ο χρήστης έχει την επιλογή να προσθέσει ή να αφαιρέσει λεφτά στον/από τον λογαριασμό του. Η οθόνη αυτή φαίνεται στο σχήμα \ref{Mock-up Οθόνη "Balance" λειτουργικότητας}.
 
 \begin{figure}[H]
     \makebox[\textwidth]{\fbox{\includegraphics[width=\textwidth]{Mockup Screens/Balance.png}}}
-	\caption{Οθόνη "Balance" λειτουργικότητας}
-	\label{Οθόνη "Balance" λειτουργικότητας}
+	\caption{Mock-up Οθόνη "Balance" λειτουργικότητας}
+	\label{Mock-up Οθόνη "Balance" λειτουργικότητας}
 \end{figure}
+
+\section{Οθόνες Τελικού Κώδικα έκδοσης v1.0}
+\label{Code Screens}
+
+\textbf{Σημείωση:} Ό,τι λειτουργικότητα έχει εξηγηθεί για τα mock-up screens στο κεφάλαιο \ref{Mock-up Screens} και έχει παραμείνει η ίδια δεν θα εξηγηθεί ξανά για τις οθόνες του κώδικα. Θα εξηγηθεί όμως οποιαδήποτε διαφορά προέκυψε στη τελική λειτουργικότητα.
+
+\subsection{Search}
+
+\subsubsection{Search Book}
+
+\begin{figure}[H]
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Code Screens/Search Book.png}}
+	\caption{Υλοποιημένη Οθόνη "Search Book" λειτουργικότητας}
+	\label{Υλοποιημένη Οθόνη "Search Book" λειτουργικότητας}
+\end{figure}
+
+Εδώ για να εμφανιστεί το κάτω frame έχει πατηθεί το κουμπί "List Offerers" για το πρώτο βιβλίο.
+
+\subsubsection{Search User}
+
+\begin{figure}[H]
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Code Screens/Search User.png}}
+	\caption{Υλοποιημένη Οθόνη "Search User" λειτουργικότητας}
+	\label{Υλοποιημένη Οθόνη "Search User" λειτουργικότητας}
+\end{figure}
+
+Στην οθόνη αναζήτησης χρήστη πλέον αποφασίσαμε, εκτός των στοιχείων του χρήστη να εμφανίζονται τα reviews του, αντί για τα βιβλία που προσφέρει. Επίσης έχει προστεθεί η δυνατότητα προσθήκης χρήστη στη λίστα των αγαπημένων χρηστών.
+
+\subsubsection{Search Requests}
+
+\begin{figure}[H]
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Code Screens/Search Request.png}}
+	\caption{Υλοποιημένη Οθόνη "Search Requests" λειτουργικότητας}
+	\label{Υλοποιημένη Οθόνη "Search Requests" λειτουργικότητας}
+\end{figure}
+
+Εδώ για να εμφανιστεί το κάτω frame έχει πατηθεί το κουμπί "List Requesters" για το πρώτο βιβλίο.
+
+\subsection{Dashboard}
+
+\begin{figure}[H]
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Code Screens/Dashboard.png}}
+	\caption{Υλοποιημένη Οθόνη "Dashboard" λειτουργικότητας}
+	\label{Υλοποιημένη Οθόνη "Dashboard" λειτουργικότητας}
+\end{figure}
+
+\subsection{My Book Offers}
+
+\begin{figure}[H]
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Code Screens/My Book Offers.png}}
+	\caption{Υλοποιημένη Οθόνη "My Book Offers" λειτουργικότητας}
+	\label{Υλοποιημένη Οθόνη "My Book Offers" λειτουργικότητας}
+\end{figure}
+
+Εδώ πλέον έχουμε διαφοροποίηση μεταξύ των οθονών "Add" και "Edit" listings, επειδή μέσω του "Edit" αλλάζει πλέον μόνο η τιμή και ο τύπος συναλλαγής, οπότε οι δύο οθόνες είναι οι εξής:
+
+\begin{figure}[H]
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Code Screens/Add Book Details Popup.png}}
+	\caption{Υλοποιημένη Οθόνη "Add Book Details" λειτουργικότητας}
+	\label{Υλοποιημένη Οθόνη "Add Book Details" λειτουργικότητας}
+\end{figure}
+
+\begin{figure}[H]
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Code Screens/Edit Book Details Popup.png}}
+	\caption{Υλοποιημένη Οθόνη "Edit Book Details" λειτουργικότητας}
+	\label{Υλοποιημένη Οθόνη "Edit Book Details" λειτουργικότητας}
+\end{figure}
+
+\subsection{My Requests}
+
+\begin{figure}[H]
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Code Screens/My Requests.png}}
+	\caption{Υλοποιημένη Οθόνη "My Requests" λειτουργικότητας}
+	\label{Υλοποιημένη Οθόνη "My Requests" λειτουργικότητας}
+\end{figure}
+
+Οι επιλογές για "Add" και "Edit" είναι πάλι ίδιες με αυτές του "My Book Offers".
+
+\subsection{Transaction History}
+
+\begin{figure}[H]
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Code Screens/Transaction History.png}}
+	\caption{Υλοποιημένη Οθόνη "Transaction History" λειτουργικότητας}
+	\label{Υλοποιημένη Οθόνη "Transaction History" λειτουργικότητας}
+\end{figure}
+
+Πλέον στο "Transaction History" εμφανίζουμε τα στατιστικά σε pie chart αντί για bar chart, και επίσης έχουμε αφαιρέσει τη λειτουργία προσθήκης στα αγαπημένα, επειδή αυτή γίνεται πλέον στην οθόνη για "Search User".
+
+Επίσης έχουμε πλέον τις επιλογές για "Star Review" και "Star and Comment Review" έχουν ένα κοινό μέρος στις οθόνες τους, δίνοντας τη δυνατότητα για επιλογή από τη μια λειτουργία στην άλλη.
+
+\begin{figure}[H]
+    \makebox[\textwidth]{\fbox{\includegraphics[width=\textwidth]{Code Screens/Star Review.png}}}
+	\caption{Υλοποιημένη Οθόνη "Star Review" λειτουργικότητας}
+	\label{Υλοποιημένη Οθόνη "Star Review" λειτουργικότητας}
+\end{figure}
+
+\begin{figure}[H]
+    \makebox[\textwidth]{\fbox{\includegraphics[width=\textwidth]{Code Screens/Star and Comment Review.png}}}
+	\caption{Υλοποιημένη Οθόνη "Star and Comment Review" λειτουργικότητας}
+	\label{Υλοποιημένη Οθόνη "Star and Comment Review" λειτουργικότητας}
+\end{figure}
+
+\subsection{My Favorites}
+
+Η οθόνη "My Favorites" δεν είχε σχεδιαστεί αρχικά σαν mock-up screen, αλλά αποφασίσαμε στη πορεία ότι θέλαμε να την υλοποιήσουμε. Εμφανίζει τη λίστα των αγαπημένων χρηστών του χρήστη, μαζί με τα στοιχεία τους και τη δυνατότητα αφαίρεσης χρηστών από τη λίστα αγαπημένων.
+
+\begin{figure}[H]
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Code Screens/My Favorites.png}}
+	\caption{Υλοποιημένη Οθόνη "My Favorites" λειτουργικότητας}
+	\label{Υλοποιημένη Οθόνη "My Favorites" λειτουργικότητας}
+\end{figure}
+
+
+\subsection{Notifications}
+
+\begin{figure}[H]
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Code Screens/Notifications.png}}
+	\caption{Υλοποιημένη Οθόνη "Notifications" λειτουργικότητας}
+	\label{Υλοποιημένη Οθόνη "Notifications" λειτουργικότητας}
+\end{figure}
+
+Πλέον στην οθόνη των "Notifications" δεν υπάρχει δυνατότητα αφαίρεσης χρήστη από τη λίστα αγαπημένων, επειδή αυτή βρίσκεται πλέον στη σελίδα "My Favorites". Υπάρχει όμως η δυνατότητα για "Clear" μιας ειδοποίησης, ώστε να μην εμφανίζεται πλέον στην οθόνη επόμενη φορά που θα τη φορτώσει ο χρήστης. 
+
+Επίσης εμφανίζονται ειδοποιήσεις και για τα τις νέες προσφορές βιβλίων (Book Offers) και τις νέες αιτήσεις (Book Requests) που προσθέτουν οι αγαπημένοι χρήστες.
+
+\subsection{Profile και Balance}
+
+\begin{figure}[H]
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Code Screens/My Profile.png}}
+	\caption{Υλοποιημένη Οθόνη "My Profile" λειτουργικότητας}
+	\label{Υλοποιημένη Οθόνη "My Profile" λειτουργικότητας}
+\end{figure}
+
+Πλέον στο προφίλ του χρήστη εμφανίζεται και η σύντομη περιγραφή που αυτός έθεσε αλλά και το τηλέφωνό του, με δυνατότητα για την αλλαγή τους. 
+
+\begin{figure}[H]
+    \makebox[\textwidth]{\fbox{\includegraphics[width=\textwidth]{Code Screens/Balance.png}}}
+	\caption{Υλοποιημένη Οθόνη "Balance" λειτουργικότητας}
+	\label{Υλοποιημένη Οθόνη "Balance" λειτουργικότητας}
+\end{figure}
+
+Οι δυνατότητες για προσθήκη και αφαίρεση χρημάτων από το λογαριασμό του χρήστη παρόλα αυτά έχουν παραμείνει ίδιες.
 
 \section{Συμμετοχή και Ρόλοι στη Συγγραφή του Κειμένου}
 
@@ -250,6 +401,14 @@
     \item Προσθήκη του συστήματος των ειδοποιήσεων.
     \item Προσθήκη παραπάνω διευκρινήσεων σχετικά με τη λειτουργικότητα των αιτήσεων και των αναζητήσεων.
     \item Ανανέωση όλων των mock-up screens.
+\end{itemize}
+
+\subsection{Από έκδοση v0.2 σε έκδοση v1.0}
+\begin{itemize}
+    \item Μικρές διορθώσεις στη περιγραφή ώστε να εκπροσωπεύει πλήρως την τελική εργασία.
+    \item Διορθώσεις σε ορολογία που άλλαξε (τα παλιά Listings έγιναν Book Offers, επειδή με Listings πλέον εννοείται και Book Offers και Book Requests).
+    \item Προσθήκη κεφαλαίου \ref{Code Screens} με τις τελικές οθόνες που υλοποιήσαμε σε κώδικα.
+    \item Προσθήκη κατάλληλων σχολίων και παρατηρήσεων σχετικά με τυχόν αλλαγές από τα mock-up screens μέχρι το τελικό κώδικα.
 \end{itemize}
 
 \end{document}
