--- a/Reports/Team-Plan/v1.0/Files/Team-plan-v1.0.tex
+++ b/Reports/Team-Plan/v1.0/Files/Team-plan-v1.0.tex
@@ -28,7 +28,6 @@
 %Enter Title Here
  \title{Team-plan-v1.0 \\ LibShare}
  \author{\textbf{Ονόματα / ΑΜ / Έτος:} \\ Γρηγόρης Καπαδούκας / 1072484 / 4\textdegree \\ Χρήστος Μπεστητζάνος / 1072615 / 4\textdegree \\ Νικόλαος Αυγέρης / 1067508 / 5\textdegree \\ Περικλής Κοροντζής / 1072563 / 4\textdegree\\ \href{https://github.com/GregKapadoukas/University-Software-Engineering-Project}{\color{blue}GitHub Link}}
-
 \begin{document}
 
 \makeatletter
@@ -119,18 +118,54 @@
 
 Σημειώνουμε ότι σκοπός είναι να ασχοληθούμε όλοι με κάθε ρόλο, αν και οι παραπάνω ρόλοι λειτουργούν ενδεικτικά για τα ζητήματα με τα οποία θα ασχοληθούν κατά κόρον τα μέλη της ομάδας. Επισημαίνεται επίσης ότι οι όροι Product Owner και Scrum Master συμπεριλήφθηκαν λόγω της ανάγκης ύπαρξης τους από τις προδιαγραφές του Scrum. Ως Product Owner ορίσαμε τα άτομα που επινόησαν την ιδέα του έργου και έγραψαν το Project-description.
 
-\section{Βασικά Εργαλεία}
+\section{Βασικά Εργαλεία που Χρησιμοποιήσαμε}
+\label{Βασικά Εργαλεία που Χρησιμοποιήσαμε}
 
 \subsection{Συγγραφή Κειμένων}
-Για τη συγγραφή των τεχνικών κειμένων σκοπεύουμε να χρησιμοποιήσουμε LaTeX κατά κόρον, αν και υπάρχει πιθανότητα να γίνει χρήση Microsoft Word για συγκεκριμένα παραδοτέα, επειδή δεν είναι όλα τα μέλη της ομάδας εξοικειωμένα με αυτή. Σε αυτή τη περίπτωση θα φροντίσουμε η μορφοποίηση να είναι όσο το δυνατό όμοια μεταξύ κειμένων γραμμένων με διαφορετικά εργαλεία, ώστε να είναι εμφανές ότι προέρχονται από την ίδια ομάδα.
+Για τη συγγραφή των τεχνικών κειμένων χρησιμοποιούμε LaTeX, με χρήση του engine LuaTex (άρα LuaLaTeX). Τα .tex αρχεία της εργασίας περιέχονται επίσης στο GitHub της εργασίας.
 
 \subsection{Γλώσσα Προγραμματισμού και Περιβάλλον Ανάπτυξης Λογισμικού}
-Σκοπεύουμε να χρησιμοποιήσουμε μια αντικειμενοστραφή προσέγγιση με Python 3 για την ανάπτυξη του λογισμικού, επειδή πιστέυουμε πως η ευκολία χρήσης και εκμάθησης λειτουργιών της που προσφέρει σαν γλώσσα θα μας βοηθήσει πολύ να υλοποιήσουμε αποδοτικά το έργο.
+Σκοπεύουμε να χρησιμοποιήσουμε μια αντικειμενοστραφή προσέγγιση με Python 3 για την ανάπτυξη του λογισμικού, με χρήση της βιβλιοθήκης CustomTKinter για το GUI, επειδή πιστεύουμε πως η ευκολία χρήσης και εκμάθησης των λειτουργιών της σαν γλώσσα θα μας βοηθήσει πολύ να υλοποιήσουμε αποδοτικά το έργο.
 
-Το περιβάλλον ανάπτυξης λογισμικού που θα χρησιμοποιηθεί κατά κόρον είναι το Visual Studio Code της Microsoft, αν και τα μέλη της ομάδας θα έχουν την ευχέρεια να χρησιμοποιήσουν άλλα εργαλεία αν θέλουν όπως PyCharm και Neovim, με την προϋπόθεση ότι ο τελικός κώδικας θα ελέγχεται να λειτουργεί και σε VS Code.
+Το περιβάλλον ανάπτυξης λογισμικού που θα χρησιμοποιηθεί κατά κόρον είναι το Visual Studio Code της Microsoft, αν και τα μέλη της ομάδας θα έχουν την ευχέρεια να χρησιμοποιήσουν άλλα εργαλεία αν θέλουν όπως PyCharm και Neovim, με την προϋπόθεση βέβαια ότι ο τελικός κώδικας θα ελεγχτεί να λειτουργεί σε όλες τις εφαρμογές που αναφέρονται.
 
 \subsection{Σχεδιασμός Σχημάτων, Mock-up Screens και Charts}
 Θα χρησιμοποιηθεί ένας συνδυασμός από εργαλεία, όπως Paint, Paint.net, Microsoft Excel, Microsoft Project, Microsoft PowerPoint, Visual Paradigm, Gimp, Figma κ.α. Επειδή τα μέλη της ομάδας έχουν διαφορετικό βαθμό εξοικείωσης με διάφορα εργαλεία που θέλουμε να αξιοποιήσουμε. Προϋπόθεση πάντα βέβαια της χρήσης ενός εργαλείου είναι να υπάρχει μια ομοιομορφία με τα υπόλοιπα σχήματα και γραφήματα που έχουν ήδη χρησιμοποιηθεί.
+
+\section{Εμπλούτιση Κειμένου για τη Τελευταία Έκδοση}
+\label{Final Chapter}
+
+\subsection{Κατανομή Προσπάθειας της Ομάδας}
+
+\begin{itemize}
+    \item \textbf{Γρηγόρης Καπαδούκας:} Ε\textsubscript{1} = 
+	\item \textbf{Χρήστος Μπεστητζάνος:} Ε\textsubscript{2} = 
+	\item \textbf{Νικόλαος Αυγέρης:} Ε\textsubscript{3} =  
+	\item \textbf{Περικλής Κοροντζής:} Ε\textsubscript{4} =  
+\end{itemize}
+
+\subsection{Τελικό Gantt Chart και Ανάθεση Έργου}
+
+\subsection{Συμπεράσματα από τον Τρόπο Εργασίας ως Ομάδα}
+
+\subsubsection{Αλλαγές που προέκυψαν στο τρόπο συνεργασίας}
+
+Σχετικά με τον τρόπο συνεργασίας ως ομάδα, παρατηρήσαμε αρχικά ότι ορισμένες από τις ιδέες και προδιαγραφές του SCRUM δεν μας φάνηκαν τόσο ωφέλιμες για ομάδα μόνο τεσσάρων ατόμων, οπότε δεν εφαρμόστηκαν με την αυστηρή έννοια των προδιαγραφών που ορίσαμε.
+
+Έτσι για παράδειγμα, δεν έγινε σχεδιασμός και χρήση product backlog, με την έννοια που γίνεται κανονικά σε ομάδες που χρησιμοποιούν SCRUM, παρά είχαμε τον ίδιο τον Scrum Master υπεύθυνο για την συντήρηση μιας λίστας από tasks που έπρεπε να γίνουν για κάθε παραδοτέο, και στις ομαδικές συναντήσεις γινόταν ομαδική συμφωνία καταχώρησης των tasks σε διαφορετικά μέλη της ομάδας και συμφωνία καταληκτικών ημερομηνιών όπου έπρεπε ο καθένας να έχει τελειώσει τη δουλειά που ανέλαβε και διαμοιραζόταν εκ νέου εργασία.
+
+Επίσης τελικά καταλήξαμε να μην ορίζουμε sprints γύρω από τα tasks του κώδικα, με τον τρόπο που αναφέρεται παραπάνω, αλλά τα sprint cycles μας ήταν βασισμένα πάνω στις προθεσμίες υποβολών του κάθε παραδοτέου. Άρα είχαμε ένα sprint cycle για κάθε υποβολή, που δεν περιείχε φάση ανάλυσης, σχεδίασης, υλοποίησης, εφαρμογής και αξιολόγησης, παρά ασχολούμασταν με τις φάσεις στις οποίες αποσκοπούσε το κάθε παραδοτέο κάθε φορά, και στις φάσεις που αποσκοπούσαν τα προηγούμενα παραδοτέα όταν κάναμε διορθώσεις τους.
+
+Ακόμα αναφέρουμε ότι δεν είχαμε σταθερή δομή χωρισμό της ομάδας σε μικρότερες ομάδες των δύο μελών τελικά, παρά δουλεύαμε ο καθένας ανεξάρτητα στη δουλειά που του είχε ανατεθεί κάθε φορά, με συχνή επικοινωνία με τον Scrum Master για τυχόν βοήθεια ή επίλυση αποριών και μέσω των συναντήσεων γινόταν παρουσίαση της δουλειάς του κάθε ατόμου κάθε φορά και δινόταν feedback από όλα τα μέλη της ομάδας.
+
+Τέλος αναφέρουμε ότι ο ρόλος του Scrum Master δεν κατάντησε τελικά να τον εναλλάσσουμε μεταξύ των μελών των ομάδων ανά παραδοτέο, αλλά τον είχε ο Γρηγόρης Καπαδούκας για όλη τη διάρκεια της εργασίας. Με αυτό το τρόπο κρατήσαμε μια σταθερότητα στις ευθύνες που είχε κάθε άτομο της ομάδας για τη διάρκεια της εργασίας και μπορέσαμε με το καιρό να βελτιώνουμε την απόδοση των μελών, χωρίς την ανάγκη για προσαρμογή σε νέους ρόλους σε κάθε sprint.
+
+\subsubsection{Συμπεράσματα}
+
+Σημειώνουμε πως με τις αλλαγές στον τρόπο συνεργασίας που κάναμε, νιώθουμε ότι η μέθοδος που χρησιμοποιήσαμε μας βοήθησε για τον συντονισμό των μελών, εφόσον γνωρίσαμε όλοι σε κάθε χρονική στιγμή τι έπρεπε να γίνει από τον καθένα μας και σε τι χρονικό διάστημα, χωρίς να γίνεται διπλότυπη εργασία και χωρίς να δημιουργούνται παρεξηγήσεις για το ποιο άτομο είναι υπεύθυνο για κάποιο task.
+
+Αν μπορούσαμε να γυρίσουμε το χρόνο πίσω, θα επιμέναμε παραπάνω στα αρχικά χρονοδιαγράμματά μας, συγκεκριμένα στο ξεκίνημα συγγραφής του κώδικα νωρίτερα, όπως σκοπεύαμε αρχικά αλλά δεν καταφέραμε να κάνουμε. Αυτό το αναφέρουμε επειδή η εμπειρία που αποκτήσαμε κατά τη συγγραφή του κώδικα μας βοήθησε πολύ να εντοπίσουμε και να διορθώσουμε λάθη στη σχεδίαση που είχαμε κάνει, τα οποία αν είχαμε νωρίτερα την εμπειρία αυτή δεν θα τα είχαμε κάνει εξαρχής.
+
 
 \section{Συμμετοχή και Ρόλοι στη Συγγραφή του Κειμένου}
 \begin{enumerate}
@@ -149,6 +184,12 @@
     \item Ανανέωση του Pert ώστε να περιέχει τα στοιχεία, εφόσον ενημερωθήκαμε πως δεν ήταν επαρκής ο συνοδευτικός πίνακας του v0.1.
     \item Προσθήκη της Τρίτης ως μέρας συναντήσεων
     \item Προσθήκη του Microsoft PowerPoint και Figma στα εργαλεία που χρησιμοποιούμε.
+\end{itemize}
+
+\subsection{Από έκδοση v0.2 σε έκδοση v1.0}
+\begin{itemize}
+    \item Ανανέωση του κειμένου "\ref{Βασικά Εργαλεία που Χρησιμοποιήσαμε} Βασικά Εργαλεία που Χρησιμοποιήσαμε".
+    \item Προσθήκη κεφαλαίου "\ref{Final Chapter}: Εμπλούτιση Κειμένου για τη Τελευταία Έκδοση".
 \end{itemize}
 
 \end{document}
